--- a/style.css
+++ b/style.css
@@ -284,6 +284,7 @@ section .title::after{
     width: calc(33% - 20px);
     background: #222;
     text-align: center;
+    margin-bottom: 2rem;
     border-radius: 6px;
     padding: 35px 25px;
     cursor: pointer;
@@ -592,9 +593,14 @@ footer span a:hover{
         padding-left: 0rem;
     }
     .skills .skills-content .column{
+      
         
-        width: 40rem;
+        width: 100%;
        
     }
    
+}
+.item .fab{
+    font-size: 5rem;
+    margin-left:2rem;
 }
